# vault-etl

./: .gitignore  Makefile  config.yml  dw_run.py  pyproject.toml
kiwi/: __init__.py  consts.py  dw.py  sqlalchemy.py
kiwi/dw_fake_job/: __init__.py  dw_fake_job.py  dw_fake_job.sql
